Fixed time spacing

--- a/style/style.css
+++ b/style/style.css
@@ -76,7 +76,7 @@ h4 {
     padding: 0px;
     position: absolute;
     bottom: 28px;
-    right: 10px;
+    right: 29.5px;
     z-index: 1;
     line-height: 1.3;
 
